--- a/contact-app/index.html
+++ b/contact-app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/315742f680.js" crossorigin="anonymous"></script>
     <title>contact-app</title>
   </head>
   <body>
